# GEO-SEO-Suite

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: ci-workflow.yml
geo_seo/: __init__.py  cli.py
geo_seo/core/: __init__.py  config.py  exceptions.py  models.py
geo_seo/crawlers/: fetcher.py
geo_seo/scoring/: __init__.py  citability_scorer.py  llm_validator.py  passage_analyzer.py  persona_evaluator.py
tests/: conftest.py
tests/unit/: test_citability_scorer.py  test_cli.py  test_passage_analyzer.py  test_persona_evaluator.py
