[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["geo_seo"]

[project]
name = "geo-seo-suite"
version = "2.0.0"
description = "Suite profesional de optimización GEO/SEO para maximizar visibilidad en LLMs y motores de búsqueda"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Vane Rossi", email = "vanesarossi61@gmail.com"}]
keywords = ["geo", "seo", "llm", "optimization", "citability", "ai-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.25",
    "beautifulsoup4>=4.12",
    "trafilatura>=1.6",
    "structlog>=23.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "aiosqlite>=0.19",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.4",
    "respx>=0.20",
]
playwright = ["playwright>=1.40"]
api = ["fastapi>=0.104", "uvicorn[standard]>=0.24"]

[project.scripts]
geo-seo = "geo_seo.cli:app"

[project.urls]
Homepage = "https://github.com/vanesarossi61/geo-seo-suite"
Repository = "https://github.com/vanesarossi61/geo-seo-suite"
Issues = "https://github.com/vanesarossi61/geo-seo-suite/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "ANN", "S", "B", "A",
    "COM", "C4", "ISC", "ICN", "PIE", "PT", "RSE", "RET",
    "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "PL", "TRY",
    "FLY", "PERF", "RUF",
]
ignore = ["ANN101", "ANN102", "ANN401", "TRY003", "COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "ARG", "PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["trafilatura.*", "bs4.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
